[package]
name = "ecology-tools-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json", "tls"]}
okapi = "0.4.0"
rocket_okapi = "0.5.1"
serde = "1.0.142"
derive_builder = "0.11.2"
dotenv ="0.15.0"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["sync"] 